Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33221

Crash when closing Qt Creator in process cleanup

XMLWordPrintable

    • 92e6c44dd (master)

      Thread 0 Crashed::  Dispatch queue: com.apple.main-thread
      0   QtCore                        	       0x106774a98 QObject::thread() const + 0
      1   libUtils.17.0.82.dylib        	       0x107142a48 Utils::ProcessReaper::ProcessReaperImpl::ProcessReaperImpl() + 200 (processreaper.cpp:254)
      2   libUtils.17.0.82.dylib        	       0x107142970 Utils::ProcessReaper::ProcessReaperImpl::ProcessReaperImpl() + 28 (processreaper.cpp:250)
      3   libUtils.17.0.82.dylib        	       0x107142908 Utils::ProcessReaper::ProcessReaperImpl::instance() + 44 (processreaper.cpp:244)
      4   libUtils.17.0.82.dylib        	       0x107142fac Utils::ProcessReaper::ProcessReaperImpl::reap(QProcess*, std::__1::chrono::duration<long long, std::__1::ratio<1l, 1000l>>) + 308 (processreaper.cpp:286)
      5   libUtils.17.0.82.dylib        	       0x10714320c Utils::ProcessReaper::reap(QProcess*, std::__1::chrono::duration<long long, std::__1::ratio<1l, 1000l>>) + 40 (processreaper.cpp:302)
      6   libUtils.17.0.82.dylib        	       0x10718f5a8 Utils::Internal::QProcessImpl::~QProcessImpl() + 44 (qtcprocess.cpp:469)
      7   libUtils.17.0.82.dylib        	       0x10718dcb8 Utils::Internal::QProcessImpl::~QProcessImpl() + 28 (qtcprocess.cpp:469)
      8   libUtils.17.0.82.dylib        	       0x10718dce4 Utils::Internal::QProcessImpl::~QProcessImpl() + 28 (qtcprocess.cpp:469)
      9   libUtils.17.0.82.dylib        	       0x107187fb4 std::__1::default_delete<Utils::ProcessInterface>::operator()[abi:ne190102](Utils::ProcessInterface*) const + 52 (unique_ptr.h:81)
      10  libUtils.17.0.82.dylib        	       0x107187f28 std::__1::unique_ptr<Utils::ProcessInterface, std::__1::default_delete<Utils::ProcessInterface>>::reset[abi:ne190102](Utils::ProcessInterface*) + 96 (unique_ptr.h:293)
      11  libUtils.17.0.82.dylib        	       0x107187eb8 std::__1::unique_ptr<Utils::ProcessInterface, std::__1::default_delete<Utils::ProcessInterface>>::~unique_ptr[abi:ne190102]() + 32 (unique_ptr.h:262)
      12  libUtils.17.0.82.dylib        	       0x107187310 std::__1::unique_ptr<Utils::ProcessInterface, std::__1::default_delete<Utils::ProcessInterface>>::~unique_ptr[abi:ne190102]() + 28 (unique_ptr.h:262)
      13  libUtils.17.0.82.dylib        	       0x1071881dc Utils::Internal::ProcessPrivate::~ProcessPrivate() + 156 (qtcprocess.cpp:663)
      14  libUtils.17.0.82.dylib        	       0x107187368 Utils::Internal::ProcessPrivate::~ProcessPrivate() + 28 (qtcprocess.cpp:663)
      15  libUtils.17.0.82.dylib        	       0x107187394 Utils::Internal::ProcessPrivate::~ProcessPrivate() + 28 (qtcprocess.cpp:663)
      16  libUtils.17.0.82.dylib        	       0x10717c760 Utils::Process::~Process() + 252 (qtcprocess.cpp:1047)
      17  libUtils.17.0.82.dylib        	       0x10717c79c Utils::Process::~Process() + 28 (qtcprocess.cpp:1042)
      18  libUtils.17.0.82.dylib        	       0x106e10ac0 std::__1::default_delete<Utils::Process>::operator()[abi:ne190102](Utils::Process*) const + 44 (unique_ptr.h:81)
      19  libUtils.17.0.82.dylib        	       0x106e09c30 std::__1::unique_ptr<Utils::Process, std::__1::default_delete<Utils::Process>>::reset[abi:ne190102](Utils::Process*) + 96 (unique_ptr.h:293)
      20  libUtils.17.0.82.dylib        	       0x106e0c46c std::__1::unique_ptr<Utils::Process, std::__1::default_delete<Utils::Process>>::~unique_ptr[abi:ne190102]() + 32 (unique_ptr.h:262)
      21  libUtils.17.0.82.dylib        	       0x106e07168 std::__1::unique_ptr<Utils::Process, std::__1::default_delete<Utils::Process>>::~unique_ptr[abi:ne190102]() + 28 (unique_ptr.h:262)
      22  libUtils.17.0.82.dylib        	       0x107183364 Tasking::TaskAdapter<Utils::Process, std::__1::default_delete<Utils::Process>>::~TaskAdapter() + 48 (tasktree.h:522)
      23  libUtils.17.0.82.dylib        	       0x107190fe8 Utils::ProcessTaskAdapter::~ProcessTaskAdapter() + 28 (qtcprocess.h:231)
      24  libUtils.17.0.82.dylib        	       0x10718340c Utils::ProcessTaskAdapter::~ProcessTaskAdapter() + 28 (qtcprocess.h:231)
      25  libUtils.17.0.82.dylib        	       0x107183438 Utils::ProcessTaskAdapter::~ProcessTaskAdapter() + 28 (qtcprocess.h:231)
      26  libTasking.17.0.82.dylib      	       0x1052b3e08 std::__1::default_delete<Tasking::TaskInterface>::operator()[abi:ne190102](Tasking::TaskInterface*) const + 52 (unique_ptr.h:81)
      27  libTasking.17.0.82.dylib      	       0x105263d14 std::__1::unique_ptr<Tasking::TaskInterface, std::__1::default_delete<Tasking::TaskInterface>>::reset[abi:ne190102](Tasking::TaskInterface*) + 96 (unique_ptr.h:293)
      28  libTasking.17.0.82.dylib      	       0x1052b2cf4 std::__1::unique_ptr<Tasking::TaskInterface, std::__1::default_delete<Tasking::TaskInterface>>::~unique_ptr[abi:ne190102]() + 32 (unique_ptr.h:262)
      29  libTasking.17.0.82.dylib      	       0x1052b2c98 std::__1::unique_ptr<Tasking::TaskInterface, std::__1::default_delete<Tasking::TaskInterface>>::~unique_ptr[abi:ne190102]() + 28 (unique_ptr.h:262)
      30  libTasking.17.0.82.dylib      	       0x1052b2bdc Tasking::RuntimeTask::~RuntimeTask() + 120 (tasktree.cpp:2041)
      31  libTasking.17.0.82.dylib      	       0x1052b2b54 Tasking::RuntimeTask::~RuntimeTask() + 28 (tasktree.cpp:2036)
      32  libTasking.17.0.82.dylib      	       0x1052b2ad4 std::__1::default_delete<Tasking::RuntimeTask>::operator()[abi:ne190102](Tasking::RuntimeTask*) const + 44 (unique_ptr.h:81)
      33  libTasking.17.0.82.dylib      	       0x1052b2874 std::__1::__shared_ptr_pointer<Tasking::RuntimeTask*, std::__1::shared_ptr<Tasking::RuntimeTask>::__shared_ptr_default_delete<Tasking::RuntimeTask, Tasking::RuntimeTask>, std::__1::allocator<Tasking::RuntimeTask>>::__on_zero_shared() + 72 (shared_ptr.h:229)
      34  libTasking.17.0.82.dylib      	       0x105240bf4 std::__1::__shared_count::__release_shared[abi:ne190102]() + 60 (shared_ptr.h:158)
      35  libTasking.17.0.82.dylib      	       0x105240b98 std::__1::__shared_weak_count::__release_shared[abi:ne190102]() + 28 (shared_ptr.h:187)
      36  libTasking.17.0.82.dylib      	       0x1052aaf14 std::__1::shared_ptr<Tasking::RuntimeTask>::~shared_ptr[abi:ne190102]() + 56 (shared_ptr.h:670)
      37  libTasking.17.0.82.dylib      	       0x105260134 std::__1::shared_ptr<Tasking::RuntimeTask>::~shared_ptr[abi:ne190102]() + 28 (shared_ptr.h:668)
      38  libTasking.17.0.82.dylib      	       0x105276ac4 Tasking::TaskTreePrivate::startTask(std::__1::shared_ptr<Tasking::RuntimeTask> const&)::$_0::~$_0() + 32 (tasktree.cpp:2430)
      39  libTasking.17.0.82.dylib      	       0x105264058 Tasking::TaskTreePrivate::startTask(std::__1::shared_ptr<Tasking::RuntimeTask> const&)::$_0::~$_0() + 28 (tasktree.cpp:2430)
      40  libTasking.17.0.82.dylib      	       0x1052b42d0 QtPrivate::detail::StorageByValue<Tasking::TaskTreePrivate::startTask(std::__1::shared_ptr<Tasking::RuntimeTask> const&)::$_0, void>::~StorageByValue() + 28 (qfunctionaltools_impl.h:32)
      41  libTasking.17.0.82.dylib      	       0x1052b429c QtPrivate::QCallableObject<Tasking::TaskTreePrivate::startTask(std::__1::shared_ptr<Tasking::RuntimeTask> const&)::$_0, QtPrivate::List<Tasking::DoneResult>, void>::~QCallableObject() + 32 (qobjectdefs_impl.h:522)
      42  libTasking.17.0.82.dylib      	       0x1052b4228 QtPrivate::QCallableObject<Tasking::TaskTreePrivate::startTask(std::__1::shared_ptr<Tasking::RuntimeTask> const&)::$_0, QtPrivate::List<Tasking::DoneResult>, void>::~QCallableObject() + 28 (qobjectdefs_impl.h:522)
      43  libTasking.17.0.82.dylib      	       0x1052b4198 QtPrivate::QCallableObject<Tasking::TaskTreePrivate::startTask(std::__1::shared_ptr<Tasking::RuntimeTask> const&)::$_0, QtPrivate::List<Tasking::DoneResult>, void>::impl(int, QtPrivate::QSlotObjectBase*, QObject*, void**, bool*) + 128 (qobjectdefs_impl.h:541)
      44  QtCore                        	       0x1067750c8 QObject::~QObject() + 1548
      45  libTasking.17.0.82.dylib      	       0x105264778 Tasking::TaskTree::~TaskTree() + 276 (tasktree.cpp:3156)
      46  libTasking.17.0.82.dylib      	       0x105264814 Tasking::TaskTree::~TaskTree() + 28 (tasktree.cpp:3151)
      47  libTasking.17.0.82.dylib      	       0x105276fd0 std::__1::default_delete<Tasking::TaskTree>::operator()[abi:ne190102](Tasking::TaskTree*) const + 44 (unique_ptr.h:81)
      48  libTasking.17.0.82.dylib      	       0x105276f4c std::__1::unique_ptr<Tasking::TaskTree, std::__1::default_delete<Tasking::TaskTree>>::reset[abi:ne190102](Tasking::TaskTree*) + 96 (unique_ptr.h:293)
      49  libTasking.17.0.82.dylib      	       0x105276edc std::__1::unique_ptr<Tasking::TaskTree, std::__1::default_delete<Tasking::TaskTree>>::~unique_ptr[abi:ne190102]() + 32 (unique_ptr.h:262)
      50  libTasking.17.0.82.dylib      	       0x105276e60 std::__1::unique_ptr<Tasking::TaskTree, std::__1::default_delete<Tasking::TaskTree>>::~unique_ptr[abi:ne190102]() + 28 (unique_ptr.h:262)
      51  libTasking.17.0.82.dylib      	       0x1052bcf70 Tasking::TaskTreeRunner::~TaskTreeRunner() + 48 (tasktreerunner.cpp:13)
      52  libTasking.17.0.82.dylib      	       0x1052bcfa4 Tasking::TaskTreeRunner::~TaskTreeRunner() + 28 (tasktreerunner.cpp:13)
      53  libGit.dylib                  	       0x15a5735a4 VcsBase::VcsBaseClientImpl::~VcsBaseClientImpl() + 60 (vcsbaseclient.h:50)
      54  libGit.dylib                  	       0x15a573648 Git::Internal::GitClient::~GitClient() + 140 (gitclient.cpp:817)
      55  libGit.dylib                  	       0x15a572e04 Git::Internal::GitClient::~GitClient() + 28 (gitclient.cpp:817)
      56  libsystem_c.dylib             	       0x198b72944 __cxa_finalize_ranges + 480
      57  libsystem_c.dylib             	       0x198b72704 exit + 44
      58  libdyld.dylib                 	       0x198cc4dc8 dyld4::LibSystemHelpers::exit(int) const + 20
      59  dyld                          	       0x19891acac dyld4::LibSystemHelpersWrapper::exit(int) const + 172
      60  dyld                          	       0x19891abc8 start + 6124
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            jkobus Jarek Kobus
            con Eike Ziller
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes