GitClient: Wrap the instance around GuardedObject

The client, containing running task tree, needs to be
destroyed when the main event loop is still spinning.

Fixes: QTCREATORBUG-33221
Change-Id: Ib07006ec486de7dcdb8b431df79546c71e8a27b3
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: André Hartmann <aha_1980@gmx.de>